# metacard

./: README.md  pyproject.toml  requirements.txt  vercel.json
metacard/: __init__.py  constants.py  create_thumbnail.py  main.py  models.py
