[project]
name = "metacard"
version = "0.1.0"
description = ""
authors = [
    {name = "Serhii Hrekov",email = "themebeat@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pillow (>=11.3.0,<12.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn[standard] (>=0.35.0,<0.36.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
