[tool.poetry]
name = "metacard"
version = "0.1.0"
description = ""
authors = ["Serhii Hrekov <themebeat@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = ">=0.116.1,<0.117.0"
uvicorn = {extras = ["standard"], version = ">=0.35.0,<0.36.0"}
pillow = ">=11.3.0,<12.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"